[tool.poetry]
name = "filesignature"
version = "0.1.0"
description = ""
authors = ["kurotom <55354389+kurotom@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = 'filesignature'}]

[tool.poetry.dependencies]
python = "^3.7"
filesignaturecollectors = "^0.1.4"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
